Add error and maintenance pages generated by rake error_pages task

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -6664,10 +6664,8 @@ strong {
       </div>
       <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-body">
-<h1>Errors#500</h1>
-<div>
-  <h1>We're sorry, but something went wrong.</h1>
-</div>
+<h1>Service unavailable</h1>
+<p>You will be able to use the service later.</p>
 </div>
 
       </main>
