FM supplier list print page changes

--- a/public/500.html
+++ b/public/500.html
@@ -6674,7 +6674,7 @@ strong {
     </div>
   </div>
 
-  <footer class="govuk-footer" role="contentinfo">
+  <footer class="govuk-footer ccs-no-print" role="contentinfo">
       <div class="footer-feedback govuk-!-padding-1">
         <div class="govuk-width-container">
           <div class="govuk-grid-row">
@@ -6688,7 +6688,7 @@ strong {
         </div>
       </div>
 
-    <div class="govuk-footer__container govuk-width-container">
+    <div class="govuk-footer__container govuk-width-container ccs-no-print">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
           <span class="govuk-footer__logotype">
@@ -6700,7 +6700,7 @@ strong {
           </span>
         </div>
 
-        <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-grid-column-two-thirds ccs-no-print">
           <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item">
               © Crown copyright
